versão operacional com codegen
